--- a/Lab12n/views/includes/nav.ejs
+++ b/Lab12n/views/includes/nav.ejs
@@ -1,7 +1,7 @@
 
 <nav class="navbar sticky-top navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Limonera</a>
+        <a class="navbar-brand" href="list">Limonera</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
                         <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
                             <li><a class="dropdown-item" href="#">Iniciar sesion</a></li>
                             <li><a class="dropdown-item" href="#">Carrito</a></li>
-                            <li><a class="dropdown-item" href="limonera/agregar">Agregar</a></li>
+                            <li><a class="dropdown-item" href="agregar">Agregar</a></li>
 
                         </ul>
                     </li>
